--- a/lab-css-recipes-clone-master/apple-pie/styles/style.css
+++ b/lab-css-recipes-clone-master/apple-pie/styles/style.css
@@ -21,7 +21,7 @@ body{
  font-size: 5em;
  position: absolute;
  left: 35%;
- bottom: 55%;
+ bottom: 50%;
  color: white;
 }
 
@@ -62,7 +62,7 @@ hr{
 
   #img-div{
     width: 100vw;
-    height: 73vh;
+    height: 80vh;
     object-fit: cover;
 
   }
@@ -85,4 +85,10 @@ hr{
     width: 100%;
     height: auto;
     margin: 0;
+  }
+
+  button{
+    position: fixed;
+    top: 50%;
+    right: 0%;
   }
